# ikaros

./: .gitignore  test.docx
Source/UserModules/: CMakeLists.txt
Source/UserModules/ClosestPoint/: CMakeLists.txt  ClosestPoint.cc  ClosestPoint.h  ClosestPoint.ikc
Source/UserModules/ClosestPoint/Examples/: ClosestPoint_test.ikc  small_MovementDetector.ikc
Source/UserModules/ClosestPointTest/: CMakeLists.txt  ClosestPointTest.cc  ClosestPointTest.h  ClosestPointTest.ikc
Source/UserModules/ClosestPointTest/Examples/: ClosestPointTest_test.ikc
Source/UserModules/ConvertPixelToMeter/: CMakeLists.txt  ConvertPixelToMeter.cc  ConvertPixelToMeter.h  ConvertPixelToMeter.ikc
Source/UserModules/FaceMatrix/: CMakeLists.txt  FaceMatrix.cc  FaceMatrix.h  FaceMatrix.ikc
Source/UserModules/GetXYZCoordinates/: CMakeLists.txt  GetXYZCoordinates.cc  GetXYZCoordinates.h  GetXYZCoordinates.ikc  GetXYZCordinates.ikc
Source/UserModules/LookAway/: CMakeLists.txt  LookAway.cc  LookAway.h  LookAway.ikc
Source/UserModules/MvmntDetChooser/: CMakeLists.txt  MvmntDetChooser.cc  MvmntDetChooser.h
Source/UserModules/Splitter/: CMakeLists.txt  Splitter.cc  Splitter.h  Splitter.ikc
Source/UserModules/StateHandler/: CMakeLists.txt  StateHandler.cc  StateHandler.h  StateHandler.ikc
Source/UserModules/discovery_MvmntDetChooser/: CMakeLists.txt  discovery_MvmntDetChooser.cc  discovery_MvmntDetChooser.h  discovery_MvmntDetChooser.ikc
Source/UserModules/small_MvmntDetChooser/: CMakeLists.txt  small_MvmntDetChooser.cc  small_MvmntDetChooser.h  small_MvmntDetChooser.ikc
(+13 files in other folders)
